--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Calculators</title>
-    <link rel="stylesheet" href="/app.css">
+    <link rel="stylesheet" href="./app.css">
   </head>
   <body>
     <div id="app"></div>
-    <script src="/js/app.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
