--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="./js/app.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
